# EdgeGuard-Knowledge-Graph

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.airflow  LICENSE  Makefile  README.md  crontab.txt  docker-compose.monitoring.yml  docker-compose.yml  install.sh  pyproject.toml  requirements-airflow-docker.txt  requirements-dev.txt  requirements.txt  test_stix21_bundle.json
.cursor/: BUGBOT.md
.github/workflows/: ci.yml
credentials/: config.example.yaml  sources.yaml
dags/: edgeguard_metrics_server.py  edgeguard_pipeline.py
demo/: mock_resilmesh_publisher.py
docs/: ADDING_A_NODE_LABEL.md  AIRFLOW_DAGS.md  AIRFLOW_DAG_DESIGN.md  API_KEYS_SETUP.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_FLOW.md  BACKUP.md  BASELINE_LAUNCH_CHECKLIST.md  BASELINE_SMOKE_TEST.md  CLOUD_SYNC.md  COLLECTION_AND_SYNC_LIMITS.md  COLLECTORS.md  CONTRIBUTING.md  DATA_QUALITY.md  DATA_SOURCES.md  DATA_SOURCES_RATE_LIMITS.md  DEMO.md  DEPLOYMENT_READINESS_CHECKLIST.md  DOCKER_SETUP_GUIDE.md  DOCUMENTATION_AUDIT.md  ENVIRONMENTS.md  GRAPH_EXPLORER.md  HEARTBEAT.md  KNOWLEDGE_GRAPH.md  MEMORY_TUNING.md  METHODOLOGY.md  MIGRATIONS.md  MISP_SOURCES.md  MISP_TUNING.md  NEO4J_SAMPLE_QUERIES.md  PRODUCTION_READINESS.md  PROMETHEUS_SETUP.md  RESILIENCE_CONFIG.md  RESILMESH_INTEGRATION_GUIDE.md  RESILMESH_INTEGRATION_TESTING.md  RESILMESH_INTEROPERABILITY.md  RESILMESH_QUICKSTART_STIX.md  RUNBOOK.md  SECRETS_MANAGEMENT.md  (+9 more)
docs/flow_audits/: 01_baseline_sequence.md  02_checkpoint_state_machine.md  03_collector_misp_neo4j.md  04_timestamps_dates.md  05_merge_determinism.md  06_misp_aggregation.md  07_collector_baseline.md  08_relationship_integrity.md  09_comprehensive_audit.md  README.md
docs/sources/: README.md
docs/sources/MISP/: SETUP.md  docker-compose.yml  php-overrides.ini  start.sh
grafana/dashboards/: edgeguard-overview.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: prometheus.yml
migrations/: 2026_04_backfill_edges_from_orphan_props.cypher  2026_04_first_seen_at_source.md  2026_04_indicator_misp_attribute_id_backfill.cypher  2026_04_sector_edgeguard_managed_backfill.cypher  2026_04_specialize_uses_technique.cypher  2026_04_zone_override_heal.cypher  2026_05_edge_misp_event_ids_backfill_runbook.md
prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
scripts/: audit_legacy_unicode_bypass_nodes.py  backfill_cve_dates_from_nvd_meta.py  backfill_edge_misp_event_ids.py  backfill_node_uuids.py  clear_misp.py  clear_neo4j.py  debug_zone_check.py  deployment_wiring_check.sh  migrate_zone_property.py  preflight_baseline.sh  preflight_ci.sh  resilmesh_stix_smoke.sh  runtime_smoke_checklist.sh
src/: airflow_client.py  alert_processor.py  baseline_checkpoint.py  baseline_clean.py  baseline_config.py  baseline_lock.py  build_relationships.py  check_neo4j.sh  check_progress.sh  circuit_breaker.py  clean_neo4j.sh  collector_allowlist.py  collector_failure_alerts.py  config.py  datastore_probes.py  edgeguard.py  enrichment.py  enrichment_jobs.py  graphql_api.py  graphql_schema.py  health_check.py  hourly_status.sh  metrics.py  metrics_server.py  misp_health.py  nats_client.py  neo4j_client.py  node_identity.py  opentelemetry_config.py  package_meta.py  parent_dag_liveness.py  query_api.py  query_pause.py  requirements.txt  resilience.py  run.sh  run_full.sh  run_misp_to_neo4j.py  run_pipeline.py  run_pipeline_misp_spt.py  (+10 more)
src/collectors/: __init__.py  abuseipdb_collector.py  additional_feeds_collector.py  cisa_collector.py  collector_utils.py  energy_feed_collector.py  finance_feed_collector.py  global_feed_collector.py  healthcare_feed_collector.py  misp_collector.py  misp_writer.py  mitre_collector.py  nvd_collector.py  otx_collector.py  virustotal_collector.py  vt_collector.py
src/neo4j/: docker-compose.yml
tests/: conftest.py  stub_cleanup.py  test_architecture_flow_pins.py  test_auth_and_api_hardening.py  test_auth_skip_helpers.py  test_baseline_clean_destructive.py  test_baseline_dag_timeouts.py  test_baseline_lock.py  test_build_relationships_batched.py  test_collect_sources_allowlist.py  test_collection_limits.py  test_collector_failure_alerts.py  test_cybercure_soft_skip.py  test_dag_non_blocking_collectors.py  test_datastore_probes.py  test_dedup_clause_helpers.py  test_edgeguard_cli_light.py  test_edgeguard_collector_contract.py  test_edgeguard_doctor_audit.py  test_enrichment.py  test_first_seen_at_source.py  test_graphql_api.py  test_http_rate_limit.py  test_incremental_dedup.py  test_lock_atomicity.py  test_max_entries_audit.py  test_merge_key_dedup.py  test_misp_attribute_id_provenance.py  test_misp_cross_item_event_scope.py  test_misp_event_id_array_semantics.py  test_misp_event_normalize.py  test_misp_health_result.py  test_misp_http_host.py  test_misp_parse_zones.py  test_misp_writer_event_exact_match.py  test_mitre_malware_uses_comment.py  test_neo4j_client_guards.py  test_neo4j_csv_model_alignment.py  test_node_identity.py  test_node_property_promotion.py  (+78 more)
