[project]
name = "edgeguard"
# CalVer: release date YYYY.M.D (PEP 440). Bump when you tag/publish a release — not on every commit.
version = "2026.4.4"
description = "Threat Intelligence Pipeline - Sources to MISP to Neo4j"
authors = [
    {name = "EdgeGuard Team"}
]
readme = "README.md"
# EdgeGuard CI and Docker images use 3.12. Apache Airflow 2.11 supports 3.11+ upstream; this repo
# standardizes on 3.12+ for one supported interpreter line.
requires-python = ">=3.12"
license = {text = "MIT"}

# Version policy: ~= compatible-release pins — allows only patch upgrades
# within the stated major.minor, blocking silent breaking-version upgrades
# (e.g. neo4j 6.x, Airflow 4.x). Airflow was bumped 2.11→3.2 in a deliberate,
# reviewed upgrade (see [project.optional-dependencies] → airflow block).
dependencies = [
    # Core
    "neo4j~=5.27",
    "requests~=2.32",
    "pandas~=2.2",
    "pyyaml~=6.0",
    "python-dateutil~=2.9",
    "urllib3~=2.3",
    # MISP & threat-intel SDKs
    "pymisp~=2.4",
    # Correct PyPI name for AlienVault OTX SDK (otx-api is an unrelated package)
    "OTXv2~=1.5",
    # STIX 2.1 — required for STIX bundle parsing/export throughout the pipeline
    "stix2~=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "pytest-asyncio~=0.24",
    "httpx~=0.28",       # async test client for FastAPI
    "ruff~=0.9",         # linter / formatter
    "mypy~=1.14",        # static type checker
]
# Apache Airflow 3.2.x (April 2026 release). Upgraded from 2.11 to clear a
# stack of unpatched CVEs in the 2.x line (flask CVE-2026-27205,
# flask-appbuilder CVE-2025-58065/32962, airflow CVE-2025-66236) that have
# fix versions only in Airflow 3.x. The ``apache-airflow-providers-standard``
# extra ships BashOperator, PythonOperator, ShortCircuitOperator, and the
# other formerly-bundled operators — in Airflow 3 these moved out of
# ``airflow-core`` and live in the standard provider package.
#
# Breaking changes we handled in this repo:
#   - BashOperator / PythonOperator / ShortCircuitOperator moved to
#     apache-airflow-providers-standard (import path change, handled in DAGs)
#   - airflow.models.Variable → airflow.sdk.Variable (old path deprecated)
#   - airflow.utils.task_group.TaskGroup → airflow.sdk.TaskGroup
#   - Metadata DB schema migration required: run `airflow db migrate` on
#     airflow_postgres after upgrading. Back up the metadata DB first;
#     the migration is not cleanly reversible.
#   - Scheduler + API server are now separate processes; see docker-compose
#     for the updated service topology.
#
# [postgres] still pulls psycopg + the postgres provider. Keep ~=3.2 for
# patch upgrades within the stable 3.2 line; a bump to 3.3 or 4.x is a
# separate review.
airflow = [
    "apache-airflow[postgres]~=3.2",
    # Ships BashOperator, PythonOperator, ShortCircuitOperator etc. that
    # this repo imports from dags/. Required on Airflow 3.x.
    "apache-airflow-providers-standard~=1.5",
]
monitoring = [
    "prometheus-client~=0.21",
]
api = [
    "fastapi~=0.115",
    "uvicorn~=0.34",
    "slowapi~=0.1",      # rate limiting
    "nats-py~=2.9",
    # OpenTelemetry pinned to 1.41.x / 0.62b0 (April 2026) to match what
    # apache-airflow 3.2 pulls transitively. Airflow 3.x bundles its own
    # observability module (airflow._shared.observability.traces) that
    # imports opentelemetry.sdk.resources at import time; mixing
    # apache-airflow 3.2 with otel ~=1.29 / 0.50b0 produces a namespace
    # package collision ("No module named 'opentelemetry.sdk.resources';
    # 'opentelemetry.sdk' is not a package") that breaks every test
    # that imports dags/edgeguard_pipeline.py. Keeping the pins aligned
    # with Airflow's own resolver is the stable fix.
    "opentelemetry-api~=1.41",
    "opentelemetry-sdk~=1.41",
    "opentelemetry-instrumentation-fastapi~=0.62b0",
    "opentelemetry-exporter-otlp~=1.41",
]
graphql = [
    # ISIM-compatible GraphQL endpoint on port 4001
    "strawberry-graphql~=0.283",
]
# Meta-extra: everything needed for a full production deployment
all = [
    "edgeguard[api,graphql,monitoring,airflow]",
]

[project.scripts]
# After `pip install .`, these commands are available globally in the venv:
#   edgeguard doctor      — check connectivity and config
#   edgeguard heal        — auto-fix common issues
#   edgeguard validate    — check configuration
#   edgeguard monitor     — live health dashboard
#   edgeguard update      — git pull + reinstall (auto: Docker if compose available, else pip)
#   edgeguard --update    — synonym for edgeguard update
#   edgeguard update --docker | --python — force one install path
#   edgeguard version   — show CalVer + optional git short SHA (no .env required)
edgeguard = "edgeguard:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
# Large integration / CLI modules are covered by manual/e2e runs, not unit tests.
omit = [
    "src/neo4j_client.py",
    "src/run_misp_to_neo4j.py",
    "src/run_pipeline.py",
    "src/run_pipeline_misp_spt.py",
    "src/edgeguard.py",
    "src/health_check.py",
    "src/setup.py",
    "src/debug_zone_check.py",
    "src/enrichment_jobs.py",
    "src/metrics_server.py",
    "src/metrics.py",
    "src/nats_client.py",
    "src/migrate_zone_property.py",
    "src/opentelemetry_config.py",
    "src/test_*.py",
    "src/test_enrichment.py",
    "src/test_otx.py",
    "src/test_resilmesh_schema.py",
    "src/edgeguard_operator.py",
    "src/config_manager.py",
    "src/enrichment.py",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_error_summary = true
implicit_optional = true
disable_error_code = ["import-untyped"]

# Legacy modules with partial type coverage — suppress until fully annotated
[[tool.mypy.overrides]]
module = [
    "graphql_api",
    "graphql_schema",
    "query_api",
    "run_pipeline",
    "run_pipeline_misp_spt",
    "run_misp_to_neo4j",
    "edgeguard_operator",
    "edgeguard",
    "neo4j_client",
    "alert_processor",
    "metrics_server",
    "metrics",
    "config",
    "config_manager",
    "resilience",
    "misp_health",
    "setup",
    "test_otx",
    "collectors.*",
    "debug_zone_check",
    "enrichment_jobs",
]
ignore_errors = true

# Stricter checking for shared collector utilities (incremental typing).
[[tool.mypy.overrides]]
module = "collectors.collector_utils"
ignore_errors = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default arg — common in FastAPI/Depends patterns
    "B904",   # raise from err — large refactor across APIs; enable incrementally
]

[tool.ruff.lint.per-file-ignores]
# DAG files and collector entry-points must modify sys.path before importing
# project modules — E402 is intentional here.
"dags/*.py" = ["E402", "F401"]
# F821: MISP_URL, NEO4J_*, etc. are injected at runtime by _ensure_runtime_imports()
"src/edgeguard.py" = ["E402", "F821", "F841"]
"src/collectors/additional_feeds_collector.py" = ["E402"]
"src/collectors/mitre_collector.py" = ["E402"]
"src/query_api.py" = ["E402"]
"src/test_otx.py" = ["E402"]
# Unused variables in tests are common assertion patterns; E402 when imports follow sys.path / del sys.modules
"tests/*.py" = ["F841", "E712", "E402"]
"src/test_*.py" = ["F841", "F541"]
"src/debug_zone_check.py" = ["E402"]
